testsuite/poke.pkl/promo-array-arg-diag-1.pk
/* { dg-do compile } */

defun foo = (int[3] a) int: { return a[1]; }
foo ([1,2]); /* { dg-error "" } */
